Fix broken link to style.css in index.html. Fix broken render on mobile screen.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -54,6 +54,7 @@ html {
     .font-color {
         color: white!important;
     }
+
     /* <img src="./assets/images/TRUSÆL-sm.png" alt="Trusael logo"> */
 }
 
@@ -73,6 +74,19 @@ html {
     }
     .font-color {
         color: white!important;
+    }
+    .frontSlogan {
+        font-family: "Nothing you could do", serif;
+        font-weight: bold;
+        font-size: 2em;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    .frontSlogan {
+        font-family: "Nothing you could do", serif;
+        font-weight: bold;
+        font-size: 3em;
     }
 }
 
@@ -182,12 +196,6 @@ html {
 .frontButton {
     width: 35%;
     margin-bottom: 1rem;
-}
-
-.frontSlogan {
-    font-family: Nothing you could do;
-    font-weight: bold;
-    font-size: 3em;
 }
 
 .fa-1x {
